# On-chain-STARK-framework

./: README.md
generate_proof/: Cargo.toml
src/: main.rs
verifier/: .env  Cargo.toml  contract.polkavm
verifier/src/: main.rs
