[package]
name = "rust-contract-template"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"  # Required for no_std
strip = true

[dependencies]
# No-std compatible hash function for winterfell
blake3 = { version = "1.8", default-features = false }

# Procedural macro for PolkaVM
polkavm-derive = { version = "0.19.0" }

# UAPI for host fn access (must match Polkadot SDK rev)
uapi = { package = "pallet-revive-uapi", git = "https://github.com/paritytech/polkadot-sdk.git", rev = "38d2fa859861005157ccb249dca1378f015e0b06", default-features = false, features = ["unstable-hostfn"] }

#
winter-verifier = { path = "../../winterfell-0.12.0/verifier", default-features = false } 
static-alloc = "0.2.5"
winter-air = { path = "../../winterfell-0.12.0/air", default-features = false }
winter-crypto = { path = "../../winterfell-0.12.0/crypto", default-features = false  }
winter-math = { path = "../../winterfell-0.12.0/math", default-features = false  }
winter-fri = { path = "../../winterfell-0.12.0/fri", default-features = false }
winter-utils = { path = "../../winterfell-0.12.0/utils/core", default-features = false  }
winter-prover = { path = "../../winterfell-0.12.0/prover", default-features = false  }
